--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,20 @@
 [package]
 name = "hashed-permutation"
+description = "A fast, instant-access way to permute a range of numbers"
+repository = "https://github.com/afnanenayet/hashed-permutation.git"
+keywords = ["hashed", "permutation", "permute", "fast", "instant"]
 version = "1.0.0"
 authors = ["Afnan Enayet <afnan@afnan.io>"]
 edition = "2018"
+license = "MIT"
+readme = "docs/README.md"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[badges]
+azure-devops = { 
+    project = "afnanenayet/hashed-permutation",
+    pipeline = "afnanenayet.hashed-permutation" 
+}
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 failure = "0.1"
