Add proper feature support
* Fix cargo manifest with proper feature support
* Add cfg macro support to the actual error module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,8 @@ azure-devops = { project = "afnanenayet/hashed-permutation", pipeline = "afnanen
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-failure = "0.1"
+failure = { version = "0.1", optional = true }
+
+[features]
+default = []
+failure-crate = ["failure"]
