--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 failure = { version = "0.1", optional = true }
+rand = { version = "0.7", optional = true }
 
 [features]
 default = []
 failure-crate = ["failure"]
+use-rand = ["rand"]
