--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "hashed-permutation"
 description = "A fast, instant-access way to permute a range of numbers"
 repository = "https://github.com/afnanenayet/hashed-permutation.git"
 keywords = ["hashed", "permutation", "permute", "fast", "instant"]
-version = "3.0.2"
+version = "3.0.3-alpha.0"
 authors = ["Afnan Enayet <afnan@afnan.io>"]
 edition = "2018"
 license = "MIT"
