--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,10 +23,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install rust
       uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
     - name: Build
       uses: actions-rs/cargo@v1
       with:
-        command: build --all
+        command: build --all-features
         args: --verbose
     - name: Test
       uses: actions-rs/cargo@v1
