--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,14 @@ maintenance = { status = "actively-developed" }
 rand = { version = "0.8", optional = true }
 thiserror = "1.0"
 
+[dev-dependencies]
+divan = "0.1"
+rand = { version = "0.8" }
+
 [features]
 default = []
 use-rand = ["rand"]
+
+[[bench]]
+name = "kensler"
+harness = false
